fix: hide x-overflow to git rid of horizontal scrollbar issue, update testimonials

--- a/src/app.css
+++ b/src/app.css
@@ -36,3 +36,9 @@ html.lenis, html.lenis body {
 .lenis.lenis-smooth iframe {
   pointer-events: none;
 }
+
+body {
+    background-color: #f9fafb; /* This is the hex for Tailwind's gray-50 */
+    overflow-x: hidden;
+}
+
